@@ -1,3 +1,7 @@
+2010-01-08  Tristan Gingold  <gingold@adacore.com>
+
+	* archive.c: Remove bfd_special_undocumented_glue.
+
 2010-01-08  Alan Modra  <amodra@gmail.com>
 
 	PR ld/11133
